--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -17,21 +17,23 @@
     </view>
     <!-- card -->
     <view class="bottom">
-      <view class="info-card">
-        <view class="lside">
-          <text>我的团长：</text>
-          <text>我的团员：</text>
-          <text>我的排名：</text>
-          <text class="commission">￥ 99.99</text>
-          <text>当前佣金</text>
-        </view>
-        <view class="rside">
-          <text>大简木·羽衣</text>
-          <text>999</text>
-          <text>999</text>
-          <navigator url="../commission/commission?title='测试'">
-            <text class="commission-withdrawals">佣金提现</text>
-          </navigator>
+      <view class="info-card-warp">
+        <view class="info-card">
+          <view class="lside">
+            <text>我的团长：</text>
+            <text>我的团员：</text>
+            <text>我的排名：</text>
+            <text class="commission">￥ 99.99</text>
+            <text>当前佣金</text>
+          </view>
+          <view class="rside">
+            <text>大简木·羽衣</text>
+            <text>999</text>
+            <text>999</text>
+            <navigator url="../commission/commission?title='测试'">
+              <text class="commission-withdrawals">佣金提现</text>
+            </navigator>
+          </view>
         </view>
       </view>
     </view>
@@ -51,28 +53,32 @@
         </view>
       </view>
     </navigator>
-    <view class="about-list-item">
-      <view>
-        <image src="../../images/icon02.png"></image>
+    <navigator url="../coupon/coupon">
+      <view class="about-list-item">
+        <view>
+          <image src="../../images/icon02.png"></image>
+        </view>
+        <view>
+          <text>我的优惠券</text>
+        </view>
+        <view>
+          <image src="../../images/icons01.png"></image>
+        </view>
       </view>
-      <view>
-        <text>我的优惠券</text>
+    </navigator>
+    <navigator url="../bindphone/bindphone">
+      <view class="about-list-item">
+        <view>
+          <image src="../../images/icon03.png"></image>
+        </view>
+        <view>
+          <text>绑定手机号</text>
+        </view>
+        <view>
+          <image src="../../images/icons01.png"></image>
+        </view>
       </view>
-      <view>
-        <image src="../../images/icons01.png"></image>
-      </view>
-    </view>
-    <view class="about-list-item">
-      <view>
-        <image src="../../images/icon03.png"></image>
-      </view>
-      <view>
-        <text>绑定手机号</text>
-      </view>
-      <view>
-        <image src="../../images/icons01.png"></image>
-      </view>
-    </view>
+    </navigator>
     <view class="about-list-item">
       <view>
         <image src="../../images/icon04.png"></image>
