--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -56,14 +56,17 @@
   background-color: #efeff4;
 }
 
+.info-card-warp {
+  padding: 0 25rpx;
+}
+
 .header .bottom .info-card {
-  width: 700rpx;
+  width: 100%;
   height: 300rpx;
   background-color: #fff;
   box-shadow: 0 0 16rpx rgba(145, 145, 145, 0.28);
   position: relative;
   top: -150rpx;
-  left: 25rpx;
   display: flex;
   box-sizing: border-box;
   padding: 20rpx 24rpx;
