--- a/pages/bindphone/bindphone.wxml
+++ b/pages/bindphone/bindphone.wxml
@@ -1,8 +1,8 @@
 <view class="container">
   <form bindsubmit="formSubmit" class="content">
-    <input placeholder="请输入手机号"></input>
+    <input bindinput="recordPhoneNumber" type="number" maxlength="11" focus="{{isFocus}}" confirm-type="done" placeholder="请输入手机号" placeholder-class="placeholder" name="phonenumber" />
     <view class="verf-code">
-      <input placeholder="请输入验证码"></input>
+      <input type="number" maxlength="6" placeholder="请输入验证码" placeholder-class="placeholder" name="verfcode" />
       <text bindtap="handleGetVerf" style="background-color:{{being?'#999':'#02c1c9'}} ;">{{being?time:'获取验证码'}}</text>
     </view>
     <button formType="submit">立即绑定</button>
