--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -3,22 +3,19 @@
 <view class="container">
   <scroll-view scroll-y style="height: {{windowHeight}}px;" bindscroll="handleScroll" bindscrolltolower="handleSscrollToLower">
     <!-- 头部位置信息及搜索框 -->
-    <form>
-      <view class="header">
-        <view class="search-box">
-          <icon type="search" size="12" color="#a6a6a6" />
-          <input placeholder="拉面" />
-        </view>
-        <view class="search-btn" bindtap="handleChooseAddress">
-          <button formType="submit">搜索</button>
-        </view>
+    <view class="header">
+      <view class="search-box">
+        <icon type="search" size="12" color="#a6a6a6" />
+        <input placeholder="拉面" placeholder-style="height:56rpx;" focus="true" />
       </view>
-    </form>
+      <view class="search-btn" bindtap="handleChooseAddress">
+        <text>搜索</text>
+      </view>
+    </view>
     <!-- 附近商家 -->
-    <view class="shops">
-
+    <view class="shops" style="padding-top: {{tagNavFixed ? '80rpx':0}}">
       <!-- 标签的导航 -->
-      <view class="tag-nav" style="position:{{tagNavTop ? 'fixed' : 'static'}};background-color: {{tagNavTop ? '#f7f7fa' : '#fff'}};">
+      <view class="tag-nav" style="position:{{tagNavFixed ? 'fixed' : 'static'}};background-color: {{tagNavFixed ? '#f7f7fa' : '#fff'}};">
         <text>综合排序</text>
         <text>销量最高</text>
         <text>距离最近</text>
@@ -26,7 +23,7 @@
       </view>
       <!-- 商品列表 -->
       <view class="pro-list">
-        <block wx:for="{{listData}}">
+        <block wx:for="{{listData}}" wx:key="key">
           <navigator url="/">
             <template is="pro-list" data="{{item}}"></template>
           </navigator>
